contour/httpproxy.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: docker-demo-sample-ingress-httpproxy
spec:
  virtualhost:
    fqdn: sample.docker.test
  routes:
    - conditions:
      - prefix: /
      services:
        - name: sample-app-svc
          port: 8080
