contour/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-demo-sample-ingress
spec:
  rules:
    - host: sample.docker.test
      http:
        paths:
          - backend:
              serviceName: sample-app-svc
              servicePort: 8080
